deploy/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: dyndnsr53
  labels:
    app: dyndnsr53
spec:
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: http
    protocol: TCP
    name: http
  selector:
    app: dyndnsr53
